test_suite/alan-2022-examples/failing/005200_mutation.alan
source AM begin leave O2P integer rem FkG end
